<resources>
    <string name="app_name">Hux Flooder</string>
    <string name="title_activity_login">Sign In to The Huxley</string>
    <string name="title_info_activity">Welcome!</string>
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_field_required">Field Required</string>
    <string name="welcome_message">Welcome to Hux Flooder!</string>
    <string name="disclaimer_userpass_huxley">Although we ask for your username and password, your credentials will only be used during a task, always requested by you. At no time your credentials will be used without your express permission.</string>
    <string name="oauth_auth_message">Authentication at The Huxley via OAuth</string>
    <string name="hux_logo">The Huxley Logo</string>
    <string name="warning_credentials_incorrect">Please check the information you entered. Incorrect username or password.</string>
    <string name="interjection_1">Oops!</string>
    <string name="interjection_2">Ouch!</string>
    <string name="warning_connection_failed">An error has occurred while contacting the server. Please check your connection.</string>
    <string name="trying_to_connect">Trying to connect to the API. Attempt %1$d of 5.</string>
    <string name="user_greeting">Hello, &lt;b>%1$s&lt;/b>!</string>
    <string name="title_activity_main">Hux Flooder</string>
    <string name="nav_flood">Flood</string>
    <string name="configure">Set Up</string>
    <string name="servers">Servers</string>
    <string name="preferences">Preferences</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="error_invalid_credentials">Your username or password have been changed. A new login is required.</string>
    <string name="action_settings">Settings</string>
    <string name="running">Running</string>
    <string name="pending">Pending - Waiting for a server to respond</string>
    <string name="pending_cancellation">Cancellation Pending</string>
    <string name="cancelling">Cancelling</string>
    <string name="cancelled_by_user">Canceled by user</string>
    <string name="cancelled_by_too_many_failed_attempts">Canceled due to server failure</string>
    <string name="completed">Completed</string>
    <string name="server_connected">Pending - Request approved by server</string>
    <string name="unknown_status">Unknown</string>
    <string name="status">Status:</string>
    <string name="job_number">Task #%1$d</string>
    <string name="job_description">: %1$d submissions in problem %2$s</string>
    <string name="server_waiting_slot">Server preparing resources</string>
    <string name="title_activity_create_task">New Task</string>
    <string name="no_task">Oops! It seems like you do not have any tasks.</string>
    <string name="hint_txt_problem">Problem number or name</string>
    <string name="text_hux_no_submission_needed">Hux Flooder does not require an earlier submission to perform a task, enter any Hux problem!</string>
    <string name="hint_submissions_wanted">Number of submissions you want</string>
    <string name="flood">FLOOD!</string>
    <string name="title_progress_dialog">Please wait</string>
    <string name="message_progress_dialog_create_task">Creating the requested task</string>
    <string name="fill_submissions_correctly">It seems like this number of submissions is not right!</string>
    <string name="be_more_specific">Be more specific! Our server is not an oracle. We do not have AI (yet).</string>
    <string name="sorry_error">Sorry, an error occurred. Please check your connection.</string>
    <string name="no_problem_match">Couldn\'t find a problem with the information entered. Check.</string>
    <string name="manage_task">Manage Task</string>
    <string name="delete_task">Remove</string>
    <string name="restart_task">Restart</string>
    <string name="goback">Go Back</string>
    <string name="cancel_task">Cancel</string>
    <plurals name="jobs">
        <item quantity="one">Load: %1$d/%2$d task</item>
        <item quantity="other">Load: %1$d/%2$d tasks</item>
    </plurals>
    <string name="server_name">Server %1$s</string>
    <string name="online_in">Online in: %1$s</string>
    <string name="description_online_offline">Indicates whether the server is online or offline</string>
    <string name="no_server">Oh, no servers for now&#8230;</string>
    <string name="server_message">Server Message</string>
    <string name="no_connection_auto">Couldn\'t contact the server.\nWe\'ll keep trying.</string>
    <string name="no_connection_pull">Couldn\'t contact the server.\nPull to retry.</string>
    <plurals name="notification_title">
        <item quantity="one">%1$d task running</item>
        <item quantity="other">%1$d tasks running</item>
    </plurals>
    <string name="notification_text">%1$d%% done</string>
    <string name="preference_app_category">App Preferences</string>
    <string name="preference_notification_category">Notification Preferences</string>
    <string name="title_checkbox_auto_update">Automatically Update Tasks</string>
    <string name="desc_title_checkbox_auto_update">Hux Flooder will automatically update your tasks while the app is open</string>
    <string name="title_checkbox_notification">Show Tasks on Notification</string>
    <string name="desc_checkbox_notification">If any tasks are running, a notification will be displayed showing overall progress.</string>
    <string name="test_case">Test Case</string>
    <string name="get_test_case">Get Test Cases</string>
    <string name="getting_info">Getting info from Huxley, please wait&#8230;</string>
    <string name="test_case_id_desc">Test Case #%1$d</string>
    <string name="submission_time_expired">Huxley hasn\'t yet finished evaluating the problem. The evaluator module is probably offline.</string>
    <string name="wait_to_submit">You just asked for some test cases. Huxley has a limitation on continuous submissions. Please wait a moment and try again.</string>
    <string name="input">INPUT</string>
    <string name="output">OUTPUT</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="copy_input">Copy Input</string>
    <string name="copy_output">Copy Output</string>
    <string name="copied">Copied</string>
    <string name="querying_login_info">Checking login info&#8230;</string>
    <string name="submitting">Submitting code to Huxley&#8230;</string>
    <string name="waiting_period_not_finished">Waiting period is not over, trying again in a few seconds&#8230;</string>
    <string name="waiting_code_evaluation">Waiting code evaluation&#8230;</string>
    <string name="evaluation_not_over_yet">Evaluation is not over yet. We will continue to wait&#8230;</string>
    <string name="final_data">Processing final data&#8230;</string>
</resources>