<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="org.lamorim.huxflooderapp.activity.LoginActivity">
    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="invisible"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal.NoPadding" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-10dp"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/formgeral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView

                android:id="@+id/imgHux"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/hux_logo"
                android:src="@drawable/ambrosio"/>
                <TextView
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:text="@string/oauth_auth_message"
                    android:layout_toEndOf="@id/imgHux"
                    android:layout_toRightOf="@id/imgHux"/>
            </RelativeLayout>
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

        </LinearLayout>
        </LinearLayout>

    </ScrollView>
    </LinearLayout>
</LinearLayout>
