<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.lamorim.huxflooderapp.activity.CreateTaskActivity"
    tools:showIn="@layout/activity_create_task">
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/framezao">
    <org.lamorim.huxflooderapp.utility.DelayAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtProblem"
        android:hint="@string/hint_txt_problem"
        android:completionThreshold="2"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:imeOptions="flagNoExtractUi|actionSearch"/>
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"/>
    </FrameLayout>
    <EditText
        android:id="@+id/txtQtde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/framezao"
        android:inputType="number"
        android:maxLength="5"
        android:hint="@string/hint_submissions_wanted"/>
    <Button
        android:id="@+id/btnCreateTask"
        android:layout_below="@id/txtQtde"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:text="@string/flood"
        android:textSize="30sp" />
</RelativeLayout>
