<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/layoutzao"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
        android:layout_height="match_parent">
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/framezao_test_case">
    <org.lamorim.huxflooderapp.utility.DelayAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtProblemTestCase"
        android:hint="@string/hint_txt_problem"
        android:completionThreshold="2"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:imeOptions="flagNoExtractUi|actionSearch"/>
    <ProgressBar
        android:id="@+id/pb_loading_indicator_test_case"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"/>
    </FrameLayout>
        <Button
            android:id="@+id/btnGetTestCases"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/get_test_case"
            android:textSize="26sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout_progress_test_case"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ProgressBar
        android:layout_margin="5dp"
        android:layout_width="30dp"
        android:layout_height="30dp" />
        <TextView
            android:id="@+id/txt_progress_test_case"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/getting_info"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/listTestCase"
        android:name="org.lamorim.huxflooderapp.TestCaseFragment"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent"
        android:layout_marginLeft="-14dp"
        android:layout_marginRight="-14dp"
        android:layout_marginStart="-14dp"
        android:layout_marginEnd="-14dp"
        android:layout_marginTop="-12dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="org.lamorim.huxflooderapp.fragment.TestCaseFragment"
        tools:listitem="@layout/test_case_item" />
</LinearLayout>
